# codemie-mcp-connect-service

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  build.sh  create_python_venv.sh  example_requests.http  pyproject.toml  run_in_python_venv.sh  start-with-ngrok.sh
.claude/skills/gitlab-mr/: SKILL.md
.claude/skills/gitlab-mr-code-review/: SKILL.md
.claude/skills/security-lead/: SKILL.md
.claude/skills/security-lead/references/: remediation-patterns.md
.github/ISSUE_TEMPLATE/: bug_report.md
deploy-templates/: Chart.yaml  README.md  values.yaml
deploy-templates/templates/: NOTES.txt  _helpers.tpl  service.yaml  serviceaccount.yaml  statefulset.yaml
images/python/: Dockerfile  README.md  requirements.txt
mcp-servers/postgres-typescript/: package.json
mcp-servers/puppeteer-typescript/: Dockerfile  package.json
scripts/: __init__.py  benchmark.py  tooling.py
src/mcp_connect/: __init__.py  main.py
src/mcp_connect/client/: __init__.py  cache.py  client_info.py  managed.py  manager.py  methods.py  single_usage.py  streamable_http_sigv4.py  transports.py  types.py
src/mcp_connect/models/: __init__.py  request.py
src/mcp_connect/server/: __init__.py  middleware.py  routes.py
src/mcp_connect/utils/: __init__.py  context.py  errors.py  logger.py  masking.py  process.py  signer.py  substitution.py
tests/: __init__.py  conftest.py  test_auth.py  test_bridge_validation.py  test_cache.py  test_cache_cleanup.py  test_client_manager_cache.py  test_client_name.py  test_context_propagation.py  test_error_responses.py  test_graceful_shutdown.py  test_health.py  test_logger.py  test_main_error_handling.py  test_managed_lifecycle_errors.py  test_masking.py  test_mcp_methods.py  test_ping_validation.py  test_process_output.py  test_single_usage.py  test_substitution.py  test_timeout.py  test_transports.py  test_types_cleanup_errors.py
tests/fixtures/: json_rpc_server.py
tests/integration/: __init__.py
